--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
   <div class="container">
 
-    <head>
+    <header>
       <h1>Calculadora - IMC</h1>
-    </head>
+    </header>
 
     <main>
       <form id="form">
