--- a/index.html
+++ b/index.html
@@ -10,14 +10,39 @@
 </head>
 
 <body>
-  <div class="container">
+  <header>
+    <div class="sombra">
+    <div class="header-container">
+      <img src="./img/simbolo.svg" alt="IMC">
+      <nav class="header-nav">
+        <ul>
+          <li><a href="#inicio">Início</a></li>
+          <li><a href="#sobre">Sobre</a></li>
+          <li><a href="#dicas">Dicas</a></li>
+          <li><a href="#contactos">Contacto</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="header-introducao">
+      <h1>Calcule o seu peso ideal!</h1>
+      <p>O índice de massa corporal (IMC) pode ajudar a identificar qual é o seu peso ideal com base na sua idade, altura e se é homem e mulher. Com este indicador pode identificar as melhores rotinas para o controlo de peso. Inclusivamente identificar se está com o peso baixo ou com determinado nível de obesidade.</p>
+    </div>
+  </div>
+  </header>
 
-    <header>
-      <h1>Calculadora - IMC</h1>
-    </header>
-
-    <main>
+  <main>
+    <div class="container-main">
+      <h2>Calculadora - IMC</h2>
       <form id="form">
+        <label for="sexo">Sexo: </label>
+        <select name="sexo" id="sexo" placeholder="Selecione...">
+          <option selected disabled>Selecione...</option>
+          <option value="masculino">Masculino</option>
+          <option value="feminino">Feminino</option>
+          <option value="neutro">Neutro</option>
+        </select>
+        <label for="idade">Idade: </label>
+        <input type="number" id="idade" placeholder="Idade...">
         <label for="altura">Altura: </label>
         <input type="number" id="altura" placeholder="Metros...">
         <label for="peso">Peso: </label>
@@ -25,9 +50,8 @@
         <button type="button" id="submit">Calcular</button>
       </form>
       <div id="resultado"></div>
-    </main>
-
-  </div>
+    </div>
+  </main>
   <script src="./js/script.js"></script>
 </body>
 
