--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="header-introducao">
       <h1>Calcule o seu peso ideal!</h1>
-      <p>O índice de massa corporal (IMC) pode ajudar a identificar qual é o seu peso ideal com base na sua idade, altura e sexo biológico. Com este indicador pode identificar as melhores rotinas para o controlo de peso. Inclusivamente identificar se está com o peso baixo ou com determinado nível de obesidade.</p>
+      <p>O índice de massa corporal (IMC) pode ajudar a identificar qual é o seu peso ideal com base na sua idade, altura e se é homem e mulher. Com este indicador pode identificar as melhores rotinas para o controlo de peso. Inclusivamente identificar se está com o peso baixo ou com determinado nível de obesidade.</p>
     </div>
   </div>
   </header>
