--- a/index.html
+++ b/index.html
@@ -12,44 +12,61 @@
 <body>
   <header>
     <div class="sombra">
-    <div class="header-container">
-      <img src="./img/simbolo.svg" alt="IMC">
-      <nav class="header-nav">
-        <ul>
-          <li><a href="#inicio">Início</a></li>
-          <li><a href="#sobre">Sobre</a></li>
-          <li><a href="#dicas">Dicas</a></li>
-          <li><a href="#contactos">Contacto</a></li>
-        </ul>
-      </nav>
+      <div class="header-container">
+        <img src="./img/simbolo.svg" alt="IMC">
+        <div>
+          <nav id="nav" class="header-nav">
+            <ul>
+              <li><a href="#inicio">Início</a></li>
+              <li><a href="#sobre">Sobre</a></li>
+              <li><a href="#dicas">Dicas</a></li>
+              <li><a href="#contactos">Contacto</a></li>
+            </ul>
+          </nav>
+          <button type="button" id="btn-mobile">Menu</button>
+        </div>
+      </div>
+      <div class="header-introducao">
+        <h1>Calcule o seu peso ideal!</h1>
+        <p>O índice de massa corporal (IMC) pode ajudar a identificar qual é o seu peso ideal com base na sua idade, altura e sexo biológico. Com este indicador pode identificar as melhores rotinas para o controlo de peso. Inclusivamente identificar se está com o peso baixo ou com determinado nível de obesidade.</p>
+      </div>
     </div>
-    <div class="header-introducao">
-      <h1>Calcule o seu peso ideal!</h1>
-      <p>O índice de massa corporal (IMC) pode ajudar a identificar qual é o seu peso ideal com base na sua idade, altura e se é homem e mulher. Com este indicador pode identificar as melhores rotinas para o controlo de peso. Inclusivamente identificar se está com o peso baixo ou com determinado nível de obesidade.</p>
-    </div>
-  </div>
   </header>
 
   <main>
-    <div class="container-main">
-      <h2>Calculadora - IMC</h2>
-      <form id="form">
-        <label for="sexo">Sexo: </label>
-        <select name="sexo" id="sexo" placeholder="Selecione...">
-          <option selected disabled>Selecione...</option>
-          <option value="masculino">Masculino</option>
-          <option value="feminino">Feminino</option>
-          <option value="neutro">Neutro</option>
-        </select>
-        <label for="idade">Idade: </label>
-        <input type="number" id="idade" placeholder="Idade...">
-        <label for="altura">Altura: </label>
-        <input type="number" id="altura" placeholder="Metros...">
-        <label for="peso">Peso: </label>
-        <input type="number" id="peso" placeholder="Quilogramas...">
-        <button type="button" id="submit">Calcular</button>
-      </form>
-      <div id="resultado"></div>
+
+    <div class="main-descricao">
+      <h2>Calculadora do Índice de Massa Corporal (IMC)</h2>
+      <p>Quer descobrir o seu peso ideal? O índice de massa corporal (IMC) pode ajudar a calcular esse valor. A idade e o sexo biológico também têm um papel específico. A fórmula para encontrar o seu peso ideal é a seguinte: <strong>y / x²</strong>.</p>
+      <div class="descricao-detalhe">
+        <p><strong>y</strong> = massa corporal em quilo.</br><strong>x</strong> = altura em metros.</p>
+      </div>
+    </div>
+    <div class="container-cal-resul">
+      <div class="main-grid">
+        <h2>Calculadora - IMC</h2>
+        <div class="container-main">
+          <form id="form">
+            <label for="sexo">Sexo: </label>
+            <select name="sexo" id="sexo" placeholder="Selecione...">
+              <option selected disabled>Selecione...</option>
+              <option value="masculino">Masculino</option>
+              <option value="feminino">Feminino</option>
+              <option value="neutro">Neutro</option>
+            </select>
+            <label for="idade">Idade:</label>
+            <input type="number" id="idade" placeholder="Idade...">
+            <label for="altura">Altura:</label>
+            <input type="number" id="altura" placeholder="Metros...">
+            <label for="peso">Peso:</label>
+            <input type="number" id="peso" placeholder="Quilogramas...">
+            <button type="button" id="submit">Calcular</button>
+          </form>
+        </div>
+        <div>
+          <div id="resultado"></div>
+        </div>
+      </div>
     </div>
   </main>
   <script src="./js/script.js"></script>
