--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
   </header>
 
   <main>
-
     <div class="main-descricao">
       <h2>Calculadora do Índice de Massa Corporal (IMC)</h2>
       <p>Quer descobrir o seu peso ideal? O índice de massa corporal (IMC) pode ajudar a calcular esse valor. A idade e o sexo biológico também têm um papel específico. A fórmula para encontrar o seu peso ideal é a seguinte: <strong>y / x²</strong>.</p>
@@ -52,7 +51,6 @@
               <option selected disabled>Selecione...</option>
               <option value="masculino">Masculino</option>
               <option value="feminino">Feminino</option>
-              <option value="neutro">Neutro</option>
             </select>
             <label for="idade">Idade:</label>
             <input type="number" id="idade" placeholder="Idade...">
@@ -69,6 +67,7 @@
       </div>
     </div>
   </main>
+  <script src="./js/funcoes.js"></script>
   <script src="./js/script.js"></script>
 </body>
 
