--- a/index.html
+++ b/index.html
@@ -62,11 +62,21 @@
           </form>
         </div>
         <div>
-          <div id="resultado"></div>
+          <div id="resultado">
+            <div class="grid-resultado">
+              <img src="./img/simbolo.svg" alt="" width="200"> 
+              <p>Uma vida mais <br> saudável sempre!</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </main>
+  <section>
+    <div class="section">
+      
+    </div>
+  </section>
   <script src="./js/funcoes.js"></script>
   <script src="./js/script.js"></script>
 </body>
