--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <main>
     <div class="main-descricao">
       <h2>Calculadora do Índice de Massa Corporal (IMC)</h2>
-      <p>Quer descobrir o seu peso ideal? O índice de massa corporal (IMC) pode ajudar a identificar qual é o seu peso ideal com base na sua idade, altura e sexo biológico. Com este indicador pode identificar as melhores rotinas para o controlo de peso. Inclusivamente identificar se está com o peso baixo ou com determinado nível de obesidade. A fórmula para encontrar o seu peso ideal é a seguinte: <strong>y / x²</strong>.</p>
+      <p>Quer descobrir o seu peso ideal? O índice de massa corporal (IMC) pode ajudar a identificar qual é o seu peso ideal com base na sua idade, altura e sexo biológico. Com este indicador pode identificar as melhores rotinas para o controlo de peso. Inclusivamente identificar se está com o peso baixo ou com determinado nível de obesidade. A fórmula para encontrar o seu peso ideal: <strong>y / x²</strong>.</p>
       <div class="descricao-detalhe">
         <p><strong>y</strong> = massa corporal em quilo.</br><strong>x</strong> = altura em metros.</p>
       </div>
