--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
           <nav id="nav" class="header-nav">
             <ul>
               <li><a href="#inicio">Início</a></li>
-              <li><a href="#sobre">Sobre</a></li>
-              <li><a href="#dicas">Dicas</a></li>
+              <li><a href="#inicio">IMC</a></li>
+              <li><a href="#dicas">Explicação</a></li>
               <li><a href="#contactos">Contacto</a></li>
             </ul>
           </nav>
@@ -68,15 +68,61 @@
               <p>Uma vida mais <br> saudável sempre!</p>
             </div>
           </div>
+          <div class="observacoes">
+            <h3>Observações:</h3>
+            <p>Estes valores são aproximações médias apenas e não têm valor científico. Consulte seu médico para uma avaliação personalizada.</p>
+          </div>
         </div>
       </div>
     </div>
   </main>
   <section>
     <div class="section">
-
+      <div class="significado">
+        <h2>Explicação de Cada Indicador</h2>
+        <div class="indicadores">
+          <hr>
+          <div class="peso-indicadores">
+            <div class="display-flex-indicadores">
+              <h3 id="teste">Peso Baixo</h3>
+              <button type="button" id="button1" value="1">X</button>
+            </div>
+            <p id="explicacao1">Ter um peso abaixo do normal é tão pouco saudável e tanto pior do que ter excesso de peso. Uma mulher tem um peso baixo quando o seu valor de IMC é inferior a 19, enquanto para um homem o limiar é 20. Um peso abaixo do normal pode ser provocado por diferentes fatores. Poderá ser uma decisão voluntária, como uma privação alimentar ou distúrbios do comportamento alimentar, como anorexia e bulimia, que necessitam do aconselhamento de um médico. Estes distúrbios alimentares podem atingir tanto homens como mulheres, independentemente da idade. Em muitas situações é necessário a intervenção do ambiente social e de especialistas, para poder realizar uma mudança de alimentação e de mentalidade a longo prazo. Entre as causas adicionais que provocam esta falta de peso, encontramos as doenças metabólicas como o hipertiroidismo ou a diabete, parasitas, doenças inflamatórias intestinais como Síndrome de Crohn, intolerâncias alimentares ou doenças hepáticas. Também os fatores psíquicos, como o stress, podem ainda gerar falta de apetite, por conseguinte magreza extrema. Se estiver abaixo dos valores normais, deve consultar um médico para receber aconselhamento nutricional. É necessário ter em atenção começar a ter uma alimentação rica em nutrientes e calorias. O desporto e o aumento da massa muscular ajudam também a aumentar o peso.</p>
+          </div>
+          <hr>
+          <div class="peso-indicadores">
+            <div class="display-flex-indicadores">
+              <h3>Peso Normal</h3>
+              <button type="button" id="button2">X</button>
+            </div>
+            <p id="explicacao2">Por peso normal entende-se o peso natural ou ideal de uma pessoa dependendo da idade e do sexo. Para as mulheres, é desejável ter um índice de massa corporal entre 19 e 24, enquanto para os homens o IMC deve situar-se entre 20 e 25. Estes intervalos indicam que existe uma perfeita harmonia entre o peso e a altura, ou seja, no que diz respeito à alimentação e saúde, tem feito, até hoje, muitas escolhas corretas. Uma alimentação equilibrada e uma dose suficiente de exercício ajudam a manter-se em forma.</p>
+          </div>
+          <hr>
+          <div class="peso-indicadores">
+            <div class="display-flex-indicadores">
+              <h3>Excesso de Peso</h3>
+              <button type="button" id="button3">X</button>
+            </div>
+            <p id="explicacao3">O termo excesso de peso é relativo a três categorias: pré obesidade (o IMC está compreendido entre 24 e 30 para as mulheres e 25 e 30 para os homens), a obesidade (com um IMC entre 30 e 40 tanto para os homens como para as mulheres) e a obesidade grave (com um IMC superior a 40 tanto para os homens como para as mulheres). Se tiver peso a mais, deve em qualquer caso consultar um médico e um nutricionista, visto que existe o risco de desenvolver doenças cardiovasculares. Para ter um resultado mais confiável do seu tipo de excesso de peso, deve consultar o seu médico. Com a ajuda do médico poderá analisar a composição do seu corpo em termos de percentagem de massa gorda, massa muscular e água. A partir daqui, serão definidos os objetivos que não se concentrarão necessariamente apenas numa diminuição do peso corporal. Um instrumento particularmente apreciado para medir os seus progressos é a fita métrica. No início do seu novo programa alimentar, meça os seus pontos críticos: barriga, cintura e peito, em intervalos regulares ou quando se aperceber que as roupas estão lentamente a ficar mais largas, meça-os novamente. A vantagem: deste modo, eventuais oscilações de peso provocadas por retenção de líquidos ou pela menstruação, que se manifestam na balança como quilos a mais, não irão perturbar o seu humor. A fita métrica irá mostrar que continua a perder centímetro.</p>
+          </div>
+          <hr>
+          <div class="peso-indicadores">
+            <div class="display-flex-indicadores">
+              <h3>Obesidade</h3>
+              <button type="button" id="button4">X</button>
+            </div>
+            <p id="explicacao4">Por obesidade entende-se a obesidade patológica que pode atingir homens, mulheres e crianças, sem distinção de classes sociais. Nos homens e nas mulheres falamos de obesidade quando o IMC está compreendido entre 30 e 40 e de obesidade grave quando IMC é superior a 40. Caso tenha um valor destes, aconselhamos que consulte o seu médico de família para controlar o estado de saúde, a pressão arterial e os valores do sangue. As doenças cardiovasculares estão frequentemente associadas a um IMC elevado, por exemplo. Neste caso, até mesmo a distribuição de massa gorda tem um papel fundamental. Nas pessoas que apresentam um corpo “em forma de maçã” a maior parte das reservas de gordura deposita-se na região abdominal e também à volta dos órgãos internos. Estas pessoas estão, por isso, mais sujeitas ao risco de sofrerem de doenças cardiovasculares no futuro. As pessoas com um corpo “em forma de pera”, em que as camadas de gordura se acumulam normalmente nas ancas e coxas, correm menos esse risco. Se o corpo receber demasiada energia, mais do que aquela que consegue gastar, esta transforma-se em gordura. Com o tempo, acumulam-se alguns quilos em excesso. Entre os motivos adicionais para um aumento de peso tão elevado, estão também as doenças metabólicas, como por exemplo o hipertiroidismo ou diabete, além dos desequilíbrios hormonais da gravidez ou da menopausa. Se sofre de obesidade e obesidade grave é absolutamente necessário que reduza o seu peso corporal. Desta forma, não é apenas o seu aparelho locomotor que se torna mais leve, mas, a cada quilo perdido, diminui o seu risco de doenças cardiovasculares, câncer, diabete, gota, enfarte ou trombose.</p>
+          </div>
+          <hr>
+        </div>
+      </div>
     </div>
   </section>
+  <footer>
+    <div class="footer">
+
+    </div>
+  </footer>
   <script src="./js/script.js"></script>
 </body>
 
