--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <div>
           <nav id="nav" class="header-nav">
             <ul id="menu" role="menu">
-              <li><a href="#inicio">Início</a></li>
-              <li><a href="#inicio">IMC</a></li>
-              <li><a href="#dicas">Explicação</a></li>
-              <li><a href="#contactos">Contacto</a></li>
+              <li><a href="#descricao">Início</a></li>
+              <li><a href="#imc">IMC</a></li>
+              <li><a href="#significado">Explicação</a></li>
+              <li><a href="#contato">Contato</a></li>
             </ul>
             <button aria-label="Abrir Menu" type="button" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
               <span id="hamburger"></span>
@@ -35,14 +35,14 @@
   </header>
 
   <main>
-    <div class="main-descricao">
+    <div id="descricao" class="main-descricao">
       <h2>Calculadora do Índice de Massa Corporal (IMC)</h2>
       <p>Quer descobrir o seu peso ideal? O índice de massa corporal (IMC) pode ajudar a identificar qual é o seu peso ideal com base na sua idade, altura e sexo biológico. Com este indicador pode identificar as melhores rotinas para o controlo de peso. Inclusivamente identificar se está com o peso baixo ou com determinado nível de obesidade. A fórmula para encontrar o seu peso ideal:</br><strong>y / x²</strong>.</p>
       <div class="descricao-detalhe">
         <p><strong>y</strong> = massa corporal em quilo.</br><strong>x</strong> = altura em metros.</p>
       </div>
     </div>
-    <div class="container-cal-resul">
+    <div id="imc" class="container-cal-resul">
       <div class="main-grid">
         <h2>Calculadora - IMC</h2>
         <div class="container-main">
@@ -59,7 +59,10 @@
             <input type="number" id="altura" placeholder="Metros...">
             <label for="peso">Peso:</label>
             <input type="number" id="peso" placeholder="Quilogramas...">
-            <button type="button" id="submit">Calcular</button>
+            <div class="buttons">
+              <button type="reset" id="clean">Limpar</button>
+              <button type="button" id="submit">Calcular</button>
+            </div>
           </form>
         </div>
         <div>
@@ -78,7 +81,7 @@
     </div>
   </main>
   <section>
-    <div class="section">
+    <div id="significado" class="section">
       <div class="significado">
         <h2>Explicação de Cada Indicador</h2>
         <div class="indicadores">
@@ -131,7 +134,7 @@
       </div>
   </section>
   <footer>
-    <div class="footer">
+    <div id="contato" class="footer">
 
     </div>
   </footer>
