--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-  <header>
+  <header id="header">
     <div class="sombra">
       <div class="header-container">
         <img src="./img/simbolo.svg" alt="IMC">
         <div>
           <nav id="nav" class="header-nav">
             <ul id="menu" role="menu">
-              <li><a href="#descricao">Início</a></li>
+              <li><a href="#descricao">Introdução</a></li>
               <li><a href="#imc">IMC</a></li>
               <li><a href="#significado">Explicação</a></li>
               <li><a href="#contato">Contato</a></li>
@@ -133,11 +133,49 @@
         </div>
       </div>
   </section>
-  <footer>
-    <div id="contato" class="footer">
+  <section id="contato">
+    <div class="contato">
 
+      <div class="container-contato">
+
+        <div class="contato">
+          <div class="container-form-contato">
+            <h3>Contato</h3>
+            <p>adriwco@gmail.com</p>
+            <p>+55 (85) 98643-6235</p>
+            <p></p>
+          </div>
+        </div>
+
+        <div class="navegacao">
+          <div class="container-form-navegacao">
+            <h3>Navegação</h3>
+            <nav id="nav">
+              <ul id="menu" role="menu">
+                <li><a href="#header">Início</a></li>
+                <li><a href="#descricao">Introdução</a></li>
+                <li><a href="#imc">IMC</a></li>
+                <li><a href="#significado">Explicação</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+
+        <div class="grid-redes-sociais">
+          <div class="redes-sociais">
+            <h3>Redes Sociais</h3>
+            <a href="https://github.com/adriwco/" target="_blank"><img src="./img/github.svg" alt="GitHub"></a>
+            <a href="https://www.linkedin.com/in/adriweverton/" target="_blank"><img src="./img/linkedin.svg" alt="LinkedIn"></a>
+            <a href="https://twitter.com/adriwco/" target="_blank"><img src="./img/twitter.svg" alt="Twitter"></a>
+          </div>
+        </div>
+
+
+
+      </div>
     </div>
-  </footer>
+  </section>
+
   <script src="./js/script.js"></script>
 </body>
 
