--- a/index.html
+++ b/index.html
@@ -134,47 +134,49 @@
       </div>
   </section>
   <section id="contato">
-    <div class="contato">
+    <div id="container-contato">
+      <div class="contato">
+        <div class="container-contato">
 
-      <div class="container-contato">
-
-        <div class="contato">
-          <div class="container-form-contato">
-            <h3>Contato</h3>
-            <p>adriwco@gmail.com</p>
-            <p>+55 (85) 98643-6235</p>
-            <p></p>
+          <div class="contato">
+            <div class="container-form-contato">
+              <h3>Contato</h3>
+              <p>adriwco@gmail.com</p>
+              <p>+55 (85) 98643-6235</p>
+              <p>+351 962 655 782</p>
+            </div>
           </div>
-        </div>
 
-        <div class="navegacao">
-          <div class="container-form-navegacao">
-            <h3>Navegação</h3>
-            <nav id="nav">
-              <ul id="menu" role="menu">
-                <li><a href="#header">Início</a></li>
-                <li><a href="#descricao">Introdução</a></li>
-                <li><a href="#imc">IMC</a></li>
-                <li><a href="#significado">Explicação</a></li>
-              </ul>
-            </nav>
+          <div class="navegacao">
+            <div class="container-form-navegacao">
+              <h3>Navegação</h3>
+              <nav id="nav">
+                <ul id="menu" role="menu">
+                  <li><a href="#header">Início</a></li>
+                  <li><a href="#descricao">Introdução</a></li>
+                  <li><a href="#imc">IMC</a></li>
+                  <li><a href="#significado">Explicação</a></li>
+                </ul>
+              </nav>
+            </div>
           </div>
-        </div>
 
-        <div class="grid-redes-sociais">
-          <div class="redes-sociais">
-            <h3>Redes Sociais</h3>
-            <a href="https://github.com/adriwco/" target="_blank"><img src="./img/github.svg" alt="GitHub"></a>
-            <a href="https://www.linkedin.com/in/adriweverton/" target="_blank"><img src="./img/linkedin.svg" alt="LinkedIn"></a>
-            <a href="https://twitter.com/adriwco/" target="_blank"><img src="./img/twitter.svg" alt="Twitter"></a>
+          <div class="grid-redes-sociais">
+            <div class="redes-sociais">
+              <h3>Redes Sociais</h3>
+              <a href="https://github.com/adriwco/" target="_blank"><img src="./img/rede-sociais/github.svg" alt="GitHub"></a>
+              <a href="https://www.linkedin.com/in/adriweverton/" target="_blank"><img src="./img/rede-sociais/linkedin.svg" alt="LinkedIn"></a>
+              <a href="https://twitter.com/adriwco/" target="_blank"><img src="./img/rede-sociais/twitter.svg" alt="Twitter"></a>
+            </div>
           </div>
+
+
+
         </div>
-
-
-
       </div>
     </div>
   </section>
+  <footer></footer>
 
   <script src="./js/script.js"></script>
 </body>
