--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
       </div>
       <div class="header-introducao">
-        <h1>Calcule o seu peso ideal!</h1>
+        <h1>Calcule o seu peso ideal<b>!</b></h1>
       </div>
     </div>
   </header>
@@ -37,7 +37,7 @@
   <main>
     <div id="descricao" class="main-descricao">
       <h2>Calculadora do Índice de Massa Corporal (IMC)</h2>
-      <p>Quer descobrir o seu peso ideal? O índice de massa corporal (IMC) pode ajudar a identificar qual é o seu peso ideal com base na sua idade, altura e sexo biológico. Com este indicador pode identificar as melhores rotinas para o controlo de peso. Inclusivamente identificar se está com o peso baixo ou com determinado nível de obesidade. A fórmula para encontrar o seu peso ideal:</br><strong>y / x²</strong>.</p>
+      <p>O índice de massa corporal (IMC) pode ajudar a identificar qual é o seu peso ideal com base na sua idade, altura e sexo biológico. Com este indicador pode identificar as melhores rotinas para o controlo de peso. Inclusivamente identificar se está com o peso baixo ou com determinado nível de obesidade. A fórmula para encontrar o seu peso ideal:</br><strong>y / x²</strong>.</p>
       <div class="descricao-detalhe">
         <p><strong>y</strong> = massa corporal em quilo.</br><strong>x</strong> = altura em metros.</p>
       </div>
@@ -49,7 +49,7 @@
           <form id="form">
             <label for="sexo">Sexo: </label>
             <select name="sexo" id="sexo" placeholder="Selecione...">
-              <option selected disabled>Selecione...</option>
+              <option value="selecione" selected disabled>Selecione...</option>
               <option value="masculino">Masculino</option>
               <option value="feminino">Feminino</option>
             </select>
@@ -169,8 +169,6 @@
               <a href="https://twitter.com/adriwco/" target="_blank"><img src="./img/rede-sociais/twitter.svg" alt="Twitter"></a>
             </div>
           </div>
-
-
 
         </div>
       </div>
