--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
           <div class="contato">
             <div class="container-form-contato">
               <h3>Contato</h3>
-              <p>adriwco@gmail.com</p>
-              <p>+55 (85) 98643-6235</p>
-              <p>+351 962 655 782</p>
+              <a href="mailto:adriwco@gmail.com">adriwco@gmail.com</a>
+              <a href="tel:+5585986436235">+55 (85) 98643-6235</a>
+              <a href="tel:+351 62655782">+351 962 655 782</a>
             </div>
           </div>
 
