--- a/index.html
+++ b/index.html
@@ -174,7 +174,19 @@
       </div>
     </div>
   </section>
-  <footer></footer>
+  <footer>
+    <div class="footer">
+      <p>&copy Adriano Weverton Cruz Oliveira <br> Student of <a href="https://www.origamid.com/" target="_blank">Origamid</a> & <a href="https://descomplica.com.br/faculdade/" target="_blank">Uncomplicates Digital College</a></p>
+    </div>
+  </footer>
+
+  <div id="scrollFixed" data-scroll="suave" data-anima="scroll">
+      <a href="#header">
+        <div class="topo">
+          <img src="./img/circle-up.svg" alt="voltar ao topo">
+        </div>
+      </a>
+  </div>
 
   <script src="./js/script.js"></script>
 </body>
