--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <div class="contato">
             <div class="container-form-contato">
               <h3>Contato</h3>
-              <a href="mailto:adriwco@gmail.com">adriwco@gmail.com</a>
+              <a class="email" href="mailto:adriwco@gmail.com">adriwco@gmail.com</a>
               <a href="tel:+5585986436235">+55 (85) 98643-6235</a>
               <a href="tel:+351 62655782">+351 962 655 782</a>
             </div>
