--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
           <div class="grid-redes-sociais">
             <div class="redes-sociais">
               <h3>Redes Sociais</h3>
-              <a href="https://github.com/adriwco/" target="_blank"><img src="./img/rede-sociais/github.svg" alt="GitHub"></a>
-              <a href="https://www.linkedin.com/in/adriweverton/" target="_blank"><img src="./img/rede-sociais/linkedin.svg" alt="LinkedIn"></a>
-              <a href="https://twitter.com/adriwco/" target="_blank"><img src="./img/rede-sociais/twitter.svg" alt="Twitter"></a>
+              <a href="https://github.com/adriwco/" target="_blank"><img class="svg" src="./img/rede-sociais/github.svg" alt="GitHub"></a>
+              <a href="https://www.linkedin.com/in/adriweverton/" target="_blank"><img class="svg"  src="./img/rede-sociais/linkedin.svg" alt="LinkedIn"></a>
+              <a href="https://twitter.com/adriwco/" target="_blank"><img class="svg"  src="./img/rede-sociais/twitter.svg" alt="Twitter"></a>
             </div>
           </div>
 
@@ -215,9 +215,9 @@
       </div>
     </a>
   </div>
-
-  <script type="text/javascript" src="./js/jquery-3.3.1.min.js"></script>
-  <script type="text/javascript" src="./js/jquery.mask.min.js"></script>
+  
+  <script src="./js/jquery-3.3.1.min.js"></script>
+  <script src="./js/jquery.mask.min.js"></script>
   <script src="./js/script.js"></script>
 </body>
 
