--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
               <option value="feminino">Feminino</option>
             </select>
             <label for="idade">Idade:</label>
-            <input type="number" id="idade" placeholder="Idade..." min="0">
+            <input type="number" id="idade" placeholder="Idade..." min="0" max="150">
             <label for="altura">Altura:</label>
-            <input type="number" id="altura" placeholder="Metros..." min="0">
+            <input type="number" id="altura" placeholder="Metros..." min="0" max="3">
             <label for="peso">Peso:</label>
-            <input type="number" id="peso" placeholder="Quilogramas..." min="0">
+            <input type="number" id="peso" placeholder="Quilogramas..." min="0" max="450">
             <div class="buttons">
               <button type="reset" id="clean">Limpar</button>
               <button type="button" id="submit">Calcular</button>
