--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       </div>
     </div>
   </main>
-  <section>
+  <section aria-label="Significado dos Indicadores IMC">
     <div id="significado" class="section">
       <div class="significado">
         <h2>Explicação de Cada Indicador</h2>
@@ -161,7 +161,7 @@
       </div>
     </div>
   </section>
-  <section id="contato">
+  <section id="contato" aria-label="Contatos, Navegação(Menu) e Redes Sociais">
     <div id="container-contato">
       <div class="contato">
         <div class="container-contato">
