--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <header id="header">
     <div class="sombra">
       <div class="header-container">
-        <img src="./img/simbolo.svg" alt="IMC">
+        <img src="./img/simbolo.svg" alt="Logo IMC">
         <div>
           <nav class="nav header-nav">
             <ul id="controls" class="menu" role="menu">
@@ -59,7 +59,7 @@
     </div>
   </header>
 
-  <main>
+  <main aria-label="O que é IMC e Calculadora">
     <div id="descricao" class="main-descricao">
       <h2>Calculadora do Índice de Massa Corporal</h2>
       <p>O índice de massa corporal (IMC) pode ajudar a identificar qual é o seu peso ideal com base na sua idade, altura e sexo biológico. Com este indicador pode identificar as melhores rotinas para o controlo de peso. Inclusivamente identificar se está com o peso baixo ou com determinado nível de obesidade. A fórmula para encontrar o seu peso ideal: <strong class="formula">y / x²</strong>.</p>
